# kazamori

./: .gitignore  CMakeLists.txt  DR_ImageSet.txt  README.md  SVM_DataSet.txt  SVM_FullConnected.txt  SVM_Weights.txt  build.bat
GUI/: CMakeLists.txt
GUI/include/: GUI.h
GUI/src/: button.c  button.h  canvas.c  canvas.h  main.c
app/: convolution_test.c  main.c  train.c
core/: CmakeLists.txt
core/include/: core.h  kazamori.h  print.h
core/print/: data_set_print.h
core/src/: convolution.c  convolution.h  convolution_print.c  convolution_print.h  data_set.c  data_set.h  data_set_print.c  data_set_print.h  full_connected.c  full_connected.h  full_connected_print.c  full_connected_print.h  image_set.c  image_set.h  image_set_print.c  image_set_print.h  knn.c  knn.h  library.c  library.h  max_pooling.c  max_pooling.h  max_pooling_print.h  nn.c
dig_recog/: main.c
mul_class/: main.c
python/: build.bat  main.py  test.c  test.pyd
python/core/: CmakeLists.txt
python/core/print/: convolution_print.c  convolution_print.h  data_set_print.c  full_connected_print.c  full_connected_print.h  image_set_print.c  image_set_print.h  max_pooling_print.c  max_pooling_print.h  tab.h
python/core/src/: convolution.c  library.h
svm/: main.c
